# khard

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES  CONTRIBUTING.rst  MANIFEST.in  README  README.md  README.rst  config.py  flake.nix  helpers.py  khard-runner.py  khard.conf.example  main.py  pyproject.toml  setup.py  todo.txt
.github/workflows/: ci.yml  release.yml
davcontroller/: davcontroller.py
doc/: Makefile
doc/source/: bench.rst  commandline.rst  conf.py  contributing.rst  davcontroller.rst  index.rst  man.rst  manpage.rst  scripting.rst
doc/source/examples/: khard.conf.example
doc/source/man/: khard-subcommands.rst  khard.conf.rst  khard.rst
khard/: __main__.py  actions.py  address_book.py  address_import.py  carddav_object.py  cli.py  config.py  contacts.py  csv.py  exceptions.py  formatter.py  helpers.py  khard.py  object_type.py  query.py  ui.py  version.py
khard/data/: config.spec  template.csv  template.yaml
khard/helpers/: __init__.py  interactive.py  typing.py
misc/: _khard  khard.conf.example
misc/davcontroller/: davcontroller.py
misc/khard/: khard.conf.example  template_for_contact_creation.yaml
misc/sdiff/: sdiff_khard_wrapper.sh
misc/twinkle/scripts/: config.py  incoming_call.py  incoming_call_ended.py  incoming_call_failed.py
misc/zsh/: _email-khard  _khard
src/: config.py  khard.py
test/: __init__.py  helpers.py  test_actions.py  test_address_book.py  test_carddav_object.py  test_cli.py  test_command_line_interface.py  test_config.py  test_contacts.py  test_csv.py  test_editor.py  test_formatter.py  test_helpers.py  test_helpers_interactive.py  test_helpers_typing.py  test_khard.py  test_query.py  test_vcard_wrapper.py  test_yaml.py  test_yaml_editable.py
test/fixture/: discover.conf  minimal.conf  nick.conf  single_values.yaml
test/fixture/broken.abook/: unparsable.vcf
test/fixture/csv/: batman.yaml  jumbled.csv  lois_lane.yaml  neat.csv  superman.yaml
test/fixture/foo.abook/: contact2.vcf  minimal.vcf  minimal2.vcf
test/fixture/minimal.abook/: minimal.vcf
test/fixture/multiemail.abook/: main.vcf
test/fixture/nick.abook/: joe.vcf  nickname.vcf
test/fixture/test.abook/: contact1.vcf  contact2.vcf  text-bday.vcf
test/fixture/vcards/: altid.vcf  category.vcf  individual.vcf  issue249.vcf  joe.vcf  korean-c.vcf  korean-j.vcf  labels.vcf  nickname.vcf  no-nickname.vcf  org.vcf  photov3.vcf  photov4.vcf  post.vcf  tel-value-uri.vcf  text-bday.vcf  unparsable.vcf
test/templates/: multiple_values.yaml  single_values.yaml
test/vcards/: contact_with_multiple_values.vcf  contact_with_multiple_values.yaml  contact_with_single_values.vcf  contact_with_single_values.yaml
twinkle-plugin/scripts/: config.py  incoming_call.py
twinkle/scripts/: config.py  incoming_call.py  incoming_call_ended.py  incoming_call_failed.py
