[project]
name = "khard"
dynamic = ["version"]
authors = [
    { name = "Eric Scheibler", email = 'email@eric-scheibler.de' },
]
description = "A console address book manager"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Utilities",
    "Topic :: Communications :: Email :: Address Book",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
]

keywords = ["vcard", "console", "addressbook"]
license = {text = "GPL"}

dependencies = [
    "configobj == 5.*, >= 5.0.6",
    "ruamel.yaml >= 0.17.0",
    "vobject ~= 0.9.7",
]

[project.optional-dependencies]
doc = [
    'sphinx',
    'sphinx-argparse',
    'sphinx-autoapi',
    'sphinx-autodoc-typehints',
]
typing = [
    "mypy",
    # vobject does fancy dynamic stuff that is hard to type-check
    #"types-vobject",
]

[project.urls]
homepage = "https://github.com/lucc/khard"
documentation = "https://khard.readthedocs.io/en/latest/"
repository = "https://github.com/lucc/khard.git"
changelog = "https://github.com/lucc/khard/blob/main/CHANGES"

[project.scripts]
khard = "khard.khard:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['khard', 'khard.helpers']

[tool.setuptools_scm]
write_to = "khard/version.py"

[tool.mypy]
packages = ["khard", "test"]
check_untyped_defs = true
disallow_untyped_calls = true
#disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# These do not provide type anotations or stub files
module = [
    "configobj",
    "configobj.validate",
    "validate",
    "vobject",
    "vobject.base",
    "vobject.vcard",

    "khard.version"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "khard.khard"
warn_no_return = false

[[tool.mypy.overrides]]
module = "test.*"
check_untyped_defs = false
disallow_untyped_calls = false

[tool.pylint.main]
py-version = "3.9"
ignore-paths = ["khard/version.py"]

[tool.pylint."messages control"]
disable = ["consider-using-f-string"]
